# Pebble

./: .gitignore  CLAUDE.md  README.md  ai_news_engine_implementation_plan.md  extract_prds.py  extract_prds_comprehensive.py  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ai_news/: .env.example  Dockerfile  README.md  ai_news 2.db  alembic.ini  docker-compose.yml  pyproject.toml  requirements-lite.txt
ai_news/alembic/: env.py
ai_news/alembic/versions/: 0001_initial.py  0002_algorithm_v2.py  0003_content_type.py  0004_fix_cluster_members.py  0005_digest_storage_artifacts.py  0009_pgvector.py  (+3 more)
ai_news/app/: config.py  config_entities.yml  config_sources.yml  db.py  models.py
ai_news/scripts/: eval_clustering_threshold.py  eval_llm_judge_bidirectional.py  eval_relationships.py
ai_news/tests/: test_alembic_postgres_compatibility.py  test_article_blurbs.py  test_batch2_changes.py  test_cluster_members.py  test_cybersecurity_community_sources.py  test_cybersecurity_config.py  test_cybersecurity_integration.py  test_digest_storage.py  test_e2e_scoring_paths.py  test_editorial_card_taxonomy.py  test_editorial_rank.py  test_egress_metrics.py  test_egress_optimization.py  test_extraction_quality.py  test_nvd_connector.py  test_official_release_detection.py  test_realtime_events.py  test_resilience.py  test_score_calibration.py  test_security_event_detection.py  test_seed_sources.py  test_source_labels.py  test_supabase_integration.py  test_supabase_runtime.py  test_verification_backfill.py  test_verification_model.py
(+179 files in other folders)
